@@ -33,8 +33,8 @@ config="%CONFFILE%"
 # Scripts should return this value.
 declare -i failures=0
 
-# Build stage: 0, 1 or 2.  Scripts may redefine this value in response to `-s'
-# or `--stage' options.
+# Build stage: 0, 1 or 2.  Scripts should call set_stage in response to `-s' or
+# `--stage' options.
 declare -i stage=2
 
 # ------------------------------ EXIT HANDLING ------------------------------  #
@@ -315,13 +315,30 @@ function override_func {
 	is_func "$2" && eval "function $1 { $2; }"
 }
 
+# Usage: set_stage <stage>
+# Check <stage> is 0, 1 or 2, then set $stage.
+function set_stage {
+	(( $# == 1 )) || usage_error "set_stage" "<stage>" "$*"
+
+	# Extract an integer from <stage>.
+	local -i int="$1"
+
+	# If $int != $1, <stage> is not an integer.
+	if [[ $int != "$1" ]] || (( int < 0 || int > 2 )); then
+		warning "stage must be 0, 1 or 2"
+		error "stage cannot be $1"
+	fi
+
+	stage=$int
+}
+
 # Usage: stage_overrides
 # Override the functions & variables in a package profile with their
 # counterparts from stage $stage.
 function stage_overrides {
 
 	# Stage 2 is default & has no overrides.
-	(( $stage == 2 )) && return
+	(( stage == 2 )) && return
 
 	local i
 
