@@ -18,6 +18,8 @@
 # this program; if not, write to the Free Software Foundation, Inc., 59 Temple
 # Place, Suite 330, Boston, MA  02111-1307  USA
 
+# FIXME: failure called in subshells - check/fix error propagation.
+
 # Global prometheus functions.
 source "%LIBPROMETHEUS%" || exit 1
 
