@@ -1,7 +1,10 @@
 2004-07-30 Gareth Jones <gareth_jones@users.berlios.de>
 
-	* src/libprometheus.bash.in (list_files):  Removed references to
+	* src/libprometheus.bash.in (list_files): Removed references to
 	  $stage2_{archives,patches}.
+
+	* src/libprometheus.bash.in (set_stage): Added.
+	* src/pkgunpack.in: Changed `stage="$val"' to `set_stage "$val"'.
 
 2004-07-29 Gareth Jones <gareth_jones@users.berlios.de>
 
